--- a/css/board.css
+++ b/css/board.css
@@ -1,27 +1,57 @@
 
 
+.top-pad10 {
+  padding-top: 10px
+}
 .top-pad20 {
   padding-top: 20px
 }
-
-.top-pad10 {
-  padding-top: 20px
+.top-pad30 {
+  padding-top: 30px
+}
+.top-pad40 {
+  padding-top: 40px
 }
 
-.right-pad30 {
-  padding-right: 10px;
+.top-pad10 {
+  padding-top: 10px
 }
 .left-pad20 {
   padding-left: 20px
 }
+.left-pad30 {
+  padding-left: 30px
+}
+.left-pad40 {
+  padding-left: 30px
+}
+
+
 .right-pad10 {
   padding-right: 10px;
 }
 .right-pad20 {
-  padding-right: 10px;
+  padding-right: 20px;
 }
+.right-pad30 {
+  padding-right: 30px;
+}
+.right-pad40{
+  padding-right: 40px;
+}
+
+
 .date-size {
   font-size: 16px;
+}
+
+.width-60percent {
+  width: 60%;
+}
+
+.center-image {
+    display:block;
+    margin:auto;
 }
 
 body {
